--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Javascript Quiz</title>
   </head>
   <body>
+    <h1 id="title">Javascript Quiz</h1>
+    <main>
+      <h2 id="question">Question</h2>
+      <h1 class="optionFirst">option1</h1>
+      <h1 class="optionSecond">option2</h1>
+      <h1 class="optionThird">option3</h1>
+      <h1 class="optionFourth">option4</h1>
+      <button id="btn">Start</button>
+    </main>
     <script type="module" src="/home.js"></script>
   </body>
 </html>
