--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <h1 id="title">Javascript Quiz</h1>
     <main>
       <h2 id="question">Question</h2>
-      <h1 class="optionFirst">option1</h1>
-      <h1 class="optionSecond">option2</h1>
-      <h1 class="optionThird">option3</h1>
-      <h1 class="optionFourth">option4</h1>
+      <h1 class="optionFirst answer" data-num="0">option1</h1>
+      <h1 class="optionSecond answer" data-num="1">option2</h1>
+      <h1 class="optionThird answer" data-num="2">option3</h1>
+      <h1 class="optionFourth answer" data-num="3">option4</h1>
       <button id="btn">Start</button>
     </main>
     <script type="module" src="/home.js"></script>
