--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <h1 class="optionFourth answer" data-num="3">option4</h1>
       <button id="btn">Start</button>
     </main>
+    <section class="results none">
+      <h1 id="correctR"></h1>
+      <h1 id="wrongR"></h1>
+      <h1 id="final"></h1>
+    </section>
     <script type="module" src="/home.js"></script>
   </body>
 </html>
