display results section
after 12 questions, results section displays number of correct and wrong answers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1 id="title">Javascript Quiz</h1>
-    <main>
+    <main class="main">
       <h2 id="question">Question</h2>
       <h1 class="optionFirst answer" data-num="0">option1</h1>
       <h1 class="optionSecond answer" data-num="1">option2</h1>
