file connecion error fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" href="./mark.png" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,6 +29,6 @@
       <h1 id="wrongR"></h1>
       <h1 id="final"></h1>
     </section>
-    <script type="module" src="/home.js"></script>
+    <script type="module" src="./home.js"></script>
   </body>
 </html>
