--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <h1 id="correctR"></h1>
       <h1 id="wrongR"></h1>
       <h1 id="final"></h1>
+      <button id="again">Play again</button>
     </section>
     <script type="module" src="./home.js"></script>
   </body>
